--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"homepage": "http//hamzaabbas34.github.io/clonewebsite",
+  "homepage": "https://hamzaabbas34.github.io/clonewebsite",
+
 	"name": "project1",
 	"version": "0.1.0",
 	"private": true,
