--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://hamzaabbas34.github.io/clonewebsite",
-
+	"homepage": "https://hamzaabbas34.github.io/cloth",
 	"name": "project1",
 	"version": "0.1.0",
 	"private": true,
